tests/fixtures/invalid_programs/missing_brace.cryo
// Syntax error - missing closing brace
function broken() -> void {
    return;
// Missing closing brace here